--- a/profile.html
+++ b/profile.html
@@ -51,15 +51,25 @@
       <div class="sidebar">
         <di class="dashboard_tab">
           <ul>
-            <li class="menu_button">Overview</li>
-            <li class="menu_button">Budgets</li>
-            <li class="menu_button">Earnings</li>
-            <li class="menu_button">Expenses</li>
-            <li class="menu_button">Profile</li>
+            <li class="menu_button" id="overviewButton">Overview</li>
+            <li class="menu_button" id="budgetsButton">Budgets</li>
+            <li class="menu_button" id="earningsButton">Earnings</li>
+            <li class="menu_button" id="expensesButton">Expenses</li>
+            <li class="menu_button" id="profileButton">Profile</li>
           </ul>
         </di>
       </div>
-      <section class="panel"></section>
+      <section class="panel">
+        <div class="img">
+          <img src="images/profile_photo.svg" alt="" />
+        </div>
+        <div>Joined 26 appril</div>
+        <div>Email:fjsdfvnsdffv</div>
+        <div>currency</div>
+        <div class="buttons-container">
+          <button class="button-arounder">Delete Account</button>
+        </div>
+      </section>
     </div>
     <div class="footer">
       <div id="legal">
@@ -86,5 +96,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
