--- a/log_in.html
+++ b/log_in.html
@@ -31,7 +31,7 @@
     </div>
     <div class="wrapper">
       <div class="inner" style="margin-top: 90px">
-        <form class="form" action="">
+        <form class="form" action="dashboard.html">
           <h3>Login Form</h3>
           <div class="form-wrapper">
             <label for="">Email</label>
