--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="log_in.html">Dashbooard</a></li>
+            <li><a href="#">Dashbooard</a></li>
             <button class="profile_photo">
               <img src="images/profile_photo.svg" alt="" class="profile_img" />
             </button>
@@ -77,7 +77,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
     <script src="/javascript/dashboard/chart1.js" defer></script>
-    <script src="./javascript/script.js"></script>
-    <script src="./javascript/dashboard.js"></script>
+    <!-- <script src="./javascript/script.js"></script>
+    <script src="./javascript/dashboard.js"></script> -->
   </body>
 </html>
