--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="content non-header" id="landing-hero">
       <div id="hero-text">
-        <h1 id="hero1" paint-order="stroke">Spend your money <br />charily!</h1>
+        <h1 id="hero1" paint-order="stroke">Spend your money <br />clearly!</h1>
         <h3 id="hero2">
           Keep track of your daily spendings with Chary; Visualize your expenses
           and make budgeting plans to achieve your money-saving goals
