--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="profile.css" />
     <link rel="stylesheet" href="earning.css" />
-    <link rel="stylesheet" href="./css/dashboard.css" />
+    <link rel="stylesheet" href="dashboard.css" />
 
     <title>Document</title>
   </head>
@@ -76,7 +76,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
-    <script src="/javascript/dashboard/chart1.js" defer></script>
+    <script src="chart1.js" defer></script>
     <!-- <script src="./javascript/script.js"></script>
     <script src="./javascript/dashboard.js"></script> -->
   </body>
