--- a/earning.html
+++ b/earning.html
@@ -289,6 +289,31 @@
         </div>
       </section>
     </div>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span id="close" class="close">&times;</span>
+        <h2>Enter Earning Details</h2>
+        <form id="expenseForm">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required /><br />
+          <label for="amount">Amount:</label>
+          <input type="number" id="amount" name="amount" required /><br />
+          <label for="date">Date:</label>
+          <input type="date" id="date" name="date" required /><br />
+          <label for="category">Category:</label>
+          <input type="text" id="category" name="category" required /><br />
+          <label for="description">Description:</label>
+          <textarea
+            id="description"
+            name="description"
+            rows="4"
+            cols="50"
+          ></textarea
+          ><br />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
     <div class="footer">
       <div id="legal">
         <div class="legal-button">
