--- a/expense.html
+++ b/expense.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="log_in.html">Dashbooard</a></li>
+            <li><a href="log_in.html">Dashboard</a></li>
             <button class="profile_photo">
               <img src="images/profile_photo.svg" alt="" class="profile_img" />
             </button>
@@ -24,6 +24,7 @@
         </nav>
       </header>
     </div>
+
     <div class="app_container">
       <div class="sidebar">
         <di class="dashboard_tab">
@@ -36,6 +37,7 @@
           </ul>
         </di>
       </div>
+
       <section class="panel">
         <div class="tab_head">
           <h1 id="tab-header">Expenses</h1>
@@ -44,6 +46,7 @@
           </button>
         </div>
         <div class="filter-container"></div>
+
         <div class="tbl-header">
           <table cellpadding="0" cellspacing="0" border="0">
             <thead>
@@ -60,6 +63,7 @@
         <div class="tbl-content">
           <table cellpadding="0" cellspacing="0" border="0">
             <tbody>
+              <!-- Add your table rows here -->
               <tr>
                 <td>AAC</td>
                 <td>AUSTRALIAN COMPANY</td>
@@ -289,6 +293,34 @@
         </div>
       </section>
     </div>
+
+    <!-- The Modal -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span id="close" class="close">&times;</span>
+        <h2>Enter Expense Details</h2>
+        <form id="expenseForm">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required /><br />
+          <label for="amount">Amount:</label>
+          <input type="number" id="amount" name="amount" required /><br />
+          <label for="date">Date:</label>
+          <input type="date" id="date" name="date" required /><br />
+          <label for="category">Category:</label>
+          <input type="text" id="category" name="category" required /><br />
+          <label for="description">Description:</label>
+          <textarea
+            id="description"
+            name="description"
+            rows="4"
+            cols="50"
+          ></textarea
+          ><br />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+
     <div class="footer">
       <div id="legal">
         <div class="legal-button">
@@ -314,6 +346,7 @@
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
