some changes css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Chary makes budgeting as easy as pie, giving you all the tools you need to set and meet your financial goals."
+      content="Wallet-Watcher makes budgeting easys, giving you all the tools you need to set and meet your financial goals."
     />
     <link
       rel="shortcut icon"
@@ -28,7 +28,7 @@
     <script src="../static/javascript/landing.js"></script>
     <script src="../static/javascript/script.js"></script>
 
-    <title>Chary</title>
+    <title>Wallet-Watcher</title>
   </head>
 
   <body>
@@ -48,8 +48,8 @@
       <div id="hero-text">
         <h1 id="hero1" paint-order="stroke">Spend your money <br />clearly!</h1>
         <h3 id="hero2">
-          Keep track of your daily spendings with Chary; Visualize your expenses
-          and make budgeting plans to achieve your money-saving goals
+          Keep track of your daily spendings with Wallet-Watcher; Visualize your
+          expenses and make budgeting plans to achieve your money-saving goals
         </h3>
         <div id="hero3">
           <button id="hero-login" onclick="loginAction()">Log In</button>
@@ -85,9 +85,9 @@
         <div class="description">
           <h3 class="heading">Customize Budgets</h3>
           <div class="text">
-            For recurring expenses and earnings, we've got you covered! Chary's
-            flexible updating system will allow you to select all, one, or
-            future entries for editing.
+            For recurring expenses and earnings, we've got you covered!
+            Wallet-Watcher flexible updating system will allow you to select
+            all, one, or future entries for editing.
           </div>
         </div>
       </div>
@@ -100,9 +100,9 @@
         <div class="description">
           <h3 class="heading">Log Expenses</h3>
           <div class="text">
-            As you make purchases, log the costs through your Chary dashboard.
-            We will update your budgets to reflect the changes and show you all
-            the updated stats!
+            As you make purchases, log the costs through your Wallet-Watcher
+            dashboard. We will update your budgets to reflect the changes and
+            show you all the updated stats!
           </div>
         </div>
       </div>
