--- a/expense.html
+++ b/expense.html
@@ -54,7 +54,7 @@
                 <th>Name</th>
                 <th>Amount</th>
                 <th>Date</th>
-                <th>Recurring?</th>
+                <th>Category</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -66,227 +66,171 @@
               <!-- Add your table rows here -->
               <tr>
                 <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
+                <td>100$</td>
+                <td>18/10/2024</td>
                 <td>+2.01</td>
-                <td>-0.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
+                <td>10$</td>
+                <td>18/11/2024</td>
                 <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
-              </tr>
-              <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
-              </tr>
-              <tr>
-                <td>AAC</td>
-                <td>AUSTRALIAN COMPANY</td>
-                <td>$1.38</td>
-                <td>+2.01</td>
-                <td>-0.36%</td>
-              </tr>
-              <tr>
-                <td>AAD</td>
-                <td>AUSENCO</td>
-                <td>$2.38</td>
-                <td>-0.01</td>
-                <td>-1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
                 <td>AAX</td>
-                <td>ADELAIDE</td>
-                <td>$3.22</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>+1.36%</td>
+                <td>Edit Save</td>
               </tr>
               <tr>
-                <td>XXD</td>
-                <td>ADITYA BIRLA</td>
-                <td>$1.02</td>
-                <td>-1.01</td>
-                <td>+2.36%</td>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>40$</td>
+                <td>22/11/2024</td>
+                <td>+0.01</td>
+                <td>Edit Save</td>
               </tr>
             </tbody>
           </table>
