--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <a
             target="_blank"
             rel="noopener noreferrer"
-            href="https://docs.google.com/forms/d/e/1FAIpQLScy5GtuSRAn-IBCe71kLlTfBwwP0fTXXX7eG1fFd_Puev9vbw/viewform?usp=sf_link"
+            href="https://docs.google.com/forms/d/e/1FAIpQLScy5GtuSRAn-IBCe71kLlTfBwwP0fTXXX7eG1fFd_Puev9vbw/viewf"
             alt="Link to report an issue"
             >Report Issue</a
           >
