slight change in many things

--- a/profile.html
+++ b/profile.html
@@ -6,11 +6,6 @@
       name="description"
       content="Chary makes budgeting as easy as pie, giving you all the tools you need to set and meet your financial goals."
     />
-    <link
-      rel="shortcut icon"
-      sizes="256x256"
-      href="../static/images/CharyLogoSmall.svg"
-    />
 
     <!-- Google Font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +24,7 @@
     <script src="../static/javascript/landing.js"></script>
     <script src="../static/javascript/script.js"></script>
 
-    <title>Chary</title>
+    <title>Wallet-Watcher</title>
   </head>
 
   <body>
@@ -63,10 +58,11 @@
         <div class="img">
           <img src="images/profile_photo.svg" alt="" />
         </div>
-        <div>Joined 26 appril</div>
-        <div>Email:fjsdfvnsdffv</div>
-        <div>currency</div>
+        <div>Joined 26 april</div>
+        <div>Email : whoareyou@gmail.com</div>
+        <div>currency : Taka</div>
         <div class="buttons-container">
+          <button class="button-arounder">Edit Account</button>
           <button class="button-arounder">Delete Account</button>
         </div>
       </section>
