--- a/budgets.html
+++ b/budgets.html
@@ -9,6 +9,117 @@
     <link rel="stylesheet" href="earning.css" />
     <link rel="stylesheet" href="budgets.css" />
     <title>Document</title>
+    <style>
+      .panel {
+        /* background-color: aqua; */
+        display: grid;
+        height: 100%;
+        width: 100%;
+        /* grid-template-columns: repeat(12, 1frs); */
+        grid-template-columns: 100px 1fr;
+        grid-template-rows: 40px 150px 40px;
+      }
+      .tab_head {
+        grid-column: 1 / -1;
+        margin-top: 20px;
+        /* display: flex;
+        align-items: left;
+        justify-content: space-between;  */
+      }
+      .line {
+        grid-column: 1 / -1;
+        height: 75px;
+        margin-top: 20px;
+        background-color: #1e0206;
+        margin-left: 40px;
+        margin-right: 30px;
+        border-radius: 30px;
+      }
+      .line {
+        display: flex;
+        align-items: center;
+        justify-content: start; /* Align items to the left */
+        padding: 10px;
+        /* background-color: lightgray; */
+        /* border: 1px solid #ccc; */
+        position: relative; /* Required for dropdown positioning */
+      }
+
+      .dropdown-button {
+        background-color: #f6d4d2;
+        color: black;
+        font-weight: bold;
+        border: none;
+        height: 40px;
+        width: 155px;
+        margin-left: 70px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-size: 14px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        gap: 8px; /* Space between button text and arrow */
+        border-radius: 10px;
+      }
+
+      .dropdown-button:hover {
+        background-color: #f6d4d2;
+      }
+
+      .arrow-icon {
+        width: 20px;
+        height: 20px;
+      }
+
+      .dropdown-menu {
+        display: none;
+        position: absolute;
+        top: 100%; /* Position directly below the button */
+        left: 0;
+        background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        list-style: none;
+        margin-left: 70px;
+        margin-top: -10px;
+        padding: 0;
+        min-width: 150px;
+        z-index: 1000;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      .dropdown-menu li {
+        padding: 8px 12px;
+      }
+
+      .dropdown-menu li a {
+        color: black;
+        text-decoration: none;
+      }
+
+      .dropdown-menu li:hover {
+        background-color: #f5f5f5;
+      }
+
+      /* Show the dropdown menu when hovering over the button */
+      .dropdown-menu.show {
+        display: block;
+      }
+      .date-button {
+        padding: 6px 10px;
+        margin-left: 20px;
+        height: 40px;
+        width: 155px;
+        font-size: 14px;
+        border: 1px solid #ccc;
+        background-color: #f6d4d2;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: bold;
+        border-radius: 10px;
+      }
+    </style>
   </head>
   <body>
     <div id="header-container">
@@ -39,10 +150,26 @@
       </div>
       <section class="panel">
         <div class="tab_head">
-          <h1 id="tab-header">Budget</h1>
+          <h1 id="tab-header">Budgets</h1>
           <button id="add-earning-button" class="add-icon">
             <img src="images/PlusIcon.svg" alt="Add icon" />
           </button>
+        </div>
+        <div class="line">
+          <button class="dropdown-button" onclick="toggleDropdown()">
+            Active Budget
+            <img
+              src="images/DropdownArrow.png"
+              alt="Dropdown arrow"
+              class="arrow-icon"
+            />
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Option 1</a></li>
+            <li><a href="#">Option 2</a></li>
+            <li><a href="#">Option 3</a></li>
+          </ul>
+          <input type="date" class="date-button" />
         </div>
         <div class="filter-container"></div>
       </section>
@@ -50,16 +177,13 @@
     <div id="modal" class="modal">
       <div class="modal-content">
         <span id="close" class="close">&times;</span>
-        <h2>Enter Earning Details</h2>
+        <h2>Enter Budget Details</h2>
         <form id="expenseForm">
-          <label for="name">Name:</label>
+          <label for="name">Title:</label>
           <input type="text" id="name" name="name" required /><br />
           <label for="amount">Amount:</label>
           <input type="number" id="amount" name="amount" required /><br />
-          <label for="date">Date:</label>
-          <input type="date" id="date" name="date" required /><br />
-          <label for="category">Category:</label>
-          <input type="text" id="category" name="category" required /><br />
+
           <label for="description">Description:</label>
           <textarea
             id="description"
@@ -98,5 +222,20 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script>
+      function toggleDropdown() {
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+        dropdownMenu.classList.toggle("show");
+      }
+
+      // Close the dropdown if clicked outside
+      document.addEventListener("click", function (event) {
+        const dropdownButton = document.querySelector(".dropdown-button");
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+        if (!dropdownButton.contains(event.target)) {
+          dropdownMenu.classList.remove("show");
+        }
+      });
+    </script>
   </body>
 </html>
