--- a/expense.html
+++ b/expense.html
@@ -69,168 +69,168 @@
                 <td>100$</td>
                 <td>18/10/2024</td>
                 <td>+2.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAD</td>
                 <td>10$</td>
                 <td>18/11/2024</td>
                 <td>-0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
               <tr>
                 <td>AAX</td>
                 <td>40$</td>
                 <td>22/11/2024</td>
                 <td>+0.01</td>
-                <td>Edit Save</td>
+                <td>Edit Delete</td>
               </tr>
             </tbody>
           </table>
