--- a/budgets.html
+++ b/budgets.html
@@ -96,6 +96,8 @@
       .dropdown-menu li a {
         color: black;
         text-decoration: none;
+        font-weight: bold;
+        font-size: 14px;
       }
 
       .dropdown-menu li:hover {
@@ -165,9 +167,10 @@
             />
           </button>
           <ul class="dropdown-menu">
-            <li><a href="#">Option 1</a></li>
-            <li><a href="#">Option 2</a></li>
-            <li><a href="#">Option 3</a></li>
+            <li><a href="#">Daily Budget</a></li>
+            <li><a href="#">Weekly Budget</a></li>
+            <li><a href="#">Monthly Budget</a></li>
+            <li><a href="#">Yearly Budget</a></li>
           </ul>
           <input type="date" class="date-button" />
         </div>
