feat: added name on profile section

--- a/profile.html
+++ b/profile.html
@@ -59,6 +59,7 @@
           <img src="images/profile_photo.svg" alt="" />
         </div>
         <div>Joined 26 april</div>
+        <div>Name : Omar Faruk</div>
         <div>Email : whoareyou@gmail.com</div>
         <div>currency : Taka</div>
         <div class="buttons-container">
